[package]
name = "arnelify_broker"
description = "Broker with RPC and UMQT support."
keywords = ["arnelify", "broker", "datagrams", "tcp2"]
version = "0.9.7"
authors = ["Arnelify", "Taron Sarkisyan"]
license = "MIT"
repository = "http://github.com/arnelify/arnelify-broker-rust"
edition = "2024"

[[bin]]
name = "test_rpc"
path = "tests/rpc.rs"

[[bin]]
name = "test_umqt"
path = "tests/umqt.rs"

[lib]
name = "arnelify_broker"
crate-type = ["rlib", "cdylib"]

[dependencies]
brotli = "8.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3